# narrative-detection-simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: README.md  requirements.txt  start.sh
backend/app/: config.py  main.py
backend/app/api/: routes_chat.py  routes_framer.py  routes_health.py  routes_narratives.py  routes_simulations.py  routes_synthetic.py
backend/app/core/: llm_client.py  nlp_utils.py
backend/app/models/: chat_models.py  framer_models.py  narrative_models.py  schema.py  simulation_models.py
backend/app/services/: chat_service.py  framer_service.py  generator.py  narrative_service.py  simulation_service.py  storage_service.py  synthetic_service.py
backend/app/services/scrapers/: news_scraper.py
backend/app/tests/: test_narratives.py
frontend/: README.md  index.html  package-lock.json  package.json  webpack.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: framerService.ts  narrativeService.ts  simulationService.ts  syntheticService.ts
frontend/src/components/: DataGenerator.tsx  ForceGraph.tsx  FramerGenerator.tsx  Header.tsx  MultipleFrameDisplay.tsx  NarrativeGenerator.tsx  Navagation.tsx  SimulationRunner.tsx  SingleFrameDisplay.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useAppContext.ts
frontend/src/pages/: Contact.tsx  FrameResultWrapper.tsx  GeneratorPage.tsx  Home.tsx  NarrativeLibraryView.tsx  SimulationView.tsx  SyntheticGeneratorView.tsx
frontend/src/types/: frame.ts  graph.ts  narrative.ts  simulation.ts
