[project]
name = "backend"
version = "0.1.0"
description = "Backend for narrative manipulation simulator and synthetic data generator project"
authors = [
    {name = "Sasha Krigel",email = "sasha.krigel@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "openai (>=1.98.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
